--- a/ppdo-ar/src/app/components/sidebar/sidebar.component.html
+++ b/ppdo-ar/src/app/components/sidebar/sidebar.component.html
@@ -16,7 +16,15 @@
       <nav class="p-1 relative">
         <ul>
           <li *ngFor="let item of menuItems()" class="mb-1 relative text-sm font-medium">
-            <ng-container *ngIf="!item.requiredRole || (item.requiredRole === 'ROLE_SUPERADMIN' && (isSuperAdmin$ | async))">
+            <ng-container *ngIf="item.title === 'SEPARATOR'">
+              <div class="flex items-center px-3 mt-2 mb-1">
+                <hr class="flex-1 border-gray-300 dark:border-gray-600">
+                <span *ngIf="!isCollapsed()" class="px-2 text-xs font-semibold text-gray-500 uppercase dark:text-gray-400">sector</span>
+                <hr class="flex-1 border-gray-300 dark:border-gray-600">
+              </div>
+            </ng-container>
+
+            <ng-container *ngIf="item.title !== 'SEPARATOR' && (!item.requiredRole || (item.requiredRole === 'ROLE_SUPERADMIN' && (isSuperAdmin$ | async)))">
               <div *ngIf="!item.children">
                 <a [routerLink]="item.link" routerLinkActive="bg-blue-500 text-white"
                    [ngClass]="{ 'justify-center': isCollapsed(), 'justify-start': !isCollapsed() }"
@@ -45,6 +53,7 @@
                   <li *ngFor="let child of item.children">
                     <a (click)="handleSubmenuClick(); $event.stopPropagation()"
                        [routerLink]="child.link" routerLinkActive="bg-blue-500 text-white"
+                       [title]="child.tooltip"
                        class="flex items-center p-2 rounded-lg hover:bg-blue-500 hover:text-white dark:hover:bg-blue-600 transition-colors">
                       <fa-icon [icon]="child.icon" class="mr-3 text-sm"></fa-icon>
                       <span>{{ child.title }}</span>
@@ -58,6 +67,7 @@
                     [style.left.px]="56">
                   <li *ngFor="let child of item.children">
                     <a [routerLink]="child.link" routerLinkActive="bg-blue-500 text-white"
+                       [title]="child.tooltip"
                        class="flex items-center p-2 rounded-lg hover:bg-blue-500 hover:text-white dark:hover:bg-blue-600 transition-colors">
                       <fa-icon [icon]="child.icon" class="mr-3 text-sm"></fa-icon>
                       <span>{{ child.title }}</span>
