Update: Frontend and Backend. Put status by year in dashboard, Put year filter in the project service, Put filter in project list for the dashboard, Update value of the date of accomplishment, Backend, Update filter function

--- a/ppdo-ar/src/app/components/project-component/project-dashboard/project-dashboard.component.html
+++ b/ppdo-ar/src/app/components/project-component/project-dashboard/project-dashboard.component.html
@@ -39,7 +39,7 @@
         [class.border-green-500]="status === 'completed'"
         [class.border-red-500]="status === 'cancelled'"
         [routerLink]="['/project-list']"
-        [queryParams]="!authService.isAdmin() && userDivisionCode ? { status: status, division: userDivisionCode } : { status: status }"
+        [queryParams]="!authService.isAdmin() && userDivisionCode ? { status: status, division: userDivisionCode, year: selectedYear } : { status: status, year: selectedYear }"
       >
         <div class="flex items-center justify-between">
           <h3 class="font-medium text-gray-600 dark:text-gray-300 capitalize">{{ status }}</h3>
