--- a/ppdo-ar/src/app/components/project-component/project-detail/project-detail.component.html
+++ b/ppdo-ar/src/app/components/project-component/project-detail/project-detail.component.html
@@ -13,7 +13,7 @@
     <div class="flex flex-wrap gap-3 w-full lg:w-auto justify-end">
       <button
         (click)="editProject()"
-        class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2.5 px-5 rounded-lg flex items-center justify-center transition duration-200 text-sm whitespace-nowrap shadow-md"
+        class="border border-blue-600 text-blue-600 hover:bg-blue-50 dark:hover:bg-blue-900 font-semibold py-2.5 px-5 rounded-lg flex items-center justify-center transition duration-200 text-sm whitespace-nowrap"
       >
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
           <path d="M13.586 3.586a2 2 0 112.828 2.828l-7.279 7.279a2 2 0 01-1.071.554l-4 1a2 2 0 01-2.28-2.28l1-4a2 2 0 01.554-1.071l7.279-7.279z" />
@@ -22,7 +22,7 @@
       </button>
       <button
         (click)="confirmDelete()"
-        class="bg-red-600 hover:bg-red-700 text-white font-semibold py-2.5 px-5 rounded-lg flex items-center justify-center transition duration-200 text-sm whitespace-nowrap shadow-md"
+        class="border border-red-600 text-red-600 hover:bg-red-50 dark:hover:bg-red-900 font-semibold py-2.5 px-5 rounded-lg flex items-center justify-center transition duration-200 text-sm whitespace-nowrap"
       >
         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
           <path fill-rule="evenodd" d="M9 2a1 1 0 00-.894.553L7.382 4H4a1 1 0 000 2v10a2 2 0 002 2h8a2 2 0 002-2V6a1 1 0 100-2h-3.382l-.724-1.447A1 1 0 0011 2H9zM7 8a1 1 0 012 0v6a1 1 0 11-2 0V8zm6 0a1 1 0 012 0v6a1 1 0 11-2 0V8z" clip-rule="evenodd" />
