--- a/ppdo-ar/src/app/components/project-component/project-add-edit/project-add-edit.component.html
+++ b/ppdo-ar/src/app/components/project-component/project-add-edit/project-add-edit.component.html
@@ -143,7 +143,7 @@
 
     <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
       <div>
-        <label for="officeInCharge" class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">Office In Charge</label>
+        <label for="officeInCharge" class="block text-sm font-medium text-gray-700 dark:text-gray-300 mb-1">Officer In Charge</label>
         <input
           type="text"
           id="officeInCharge"
@@ -152,7 +152,7 @@
           [ngClass]="{'border-red-500': projectForm.get('officeInCharge')?.invalid && projectForm.get('officeInCharge')?.touched}"
         />
         <div *ngIf="projectForm.get('officeInCharge')?.invalid && projectForm.get('officeInCharge')?.touched" class="text-red-500 text-xs mt-1">
-          Office in charge is required.
+          Officer in charge is required.
         </div>
       </div>
       <div>
